@@ -5,19 +5,18 @@ import io.jsonwebtoken.Jwts;
 import io.jsonwebtoken.security.Keys;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.core.GrantedAuthority;
-import org.springframework.stereotype.Component;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import io.jsonwebtoken.Claims;
-import java.util.stream.Collectors;
-import java.util.Collections;
+import org.springframework.stereotype.Component;
+
 import javax.crypto.SecretKey;
 import java.nio.charset.StandardCharsets;
+import java.util.Collections;
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class JwtProvider {
+
     @Value("${app.jwt.secret}")
     private String secretKey;
 
@@ -28,49 +27,84 @@ public class JwtProvider {
         return Keys.hmacShaKeyFor(secretKey.getBytes(StandardCharsets.UTF_8));
     }
 
-    public String generateToken(String email, List<String> roles) {
+    /**
+     * Generate JWT containing authenticated user's authorities.
+     */
+    public String generateToken(
+            Long userId,
+            String email,
+            List<String> authorities
+    ) {
         return Jwts.builder()
                 .subject(email)
-                .claim("roles", roles)
+                .claim("uid", userId)
+                .claim("roles", authorities)
                 .issuedAt(new Date())
                 .expiration(new Date(System.currentTimeMillis() + expirationTime))
                 .signWith(getSigningKey())
                 .compact();
     }
+
+    /**
+     * Read authorities from JWT.
+     */
     public List<GrantedAuthority> getAuthoritiesFromToken(String token) {
-        Claims claims = Jwts.parser()
-                .verifyWith(getSigningKey())
-                .build()
-                .parseSignedClaims(token)
-                .getPayload();
+
+        Claims claims = parseClaims(token);
 
         List<?> roles = claims.get("roles", List.class);
 
-        if (roles == null) return Collections.emptyList();
+        if (roles == null) {
+            return Collections.emptyList();
+        }
 
         return roles.stream()
-                .map(role -> new SimpleGrantedAuthority(String.valueOf(role)))
-                .collect(Collectors.toList());
+                .map(role -> (GrantedAuthority) new SimpleGrantedAuthority(role.toString()))
+                .toList();
     }
 
-
+    /**
+     * Read email(subject) from JWT.
+     */
     public String getEmailFromToken(String token) {
-        return Jwts.parser()
-                .verifyWith(getSigningKey())
-                .build()
-                .parseSignedClaims(token)
-                .getPayload()
-                .getSubject();
+        return parseClaims(token).getSubject();
     }
 
+
+    public Long getUserIdFromToken(String token) {
+        Object uid = parseClaims(token).get("uid");
+
+        if (uid instanceof Integer value) {
+            return value.longValue();
+        }
+
+        if (uid instanceof Long value) {
+            return value;
+        }
+
+        return Long.parseLong(uid.toString());
+    }
+
+    /**
+     * Validate JWT signature & expiration.
+     */
     public boolean validateToken(String token) {
         try {
-            Jwts.parser().verifyWith(getSigningKey()).build().parseSignedClaims(token);
+            parseClaims(token);
             return true;
-        } catch (Exception e) {
+        } catch (Exception ex) {
             return false;
         }
     }
 
-
+    /**
+     * Parse JWT claims.
+     */
+    private Claims parseClaims(String token) {
+        return Jwts.parser()
+                .verifyWith(getSigningKey())
+                .build()
+                .parseSignedClaims(token)
+                .getPayload();
+    }
 }
